# cyberdudebivash-zero-day-hunter

./: .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md  build.zig  docker-compose.yml  docker-entrypoint.sh  platform.json  private_key.pem  public_key.pem  report.json
.github/workflows/: ci.yml
agent/: agent.zig  config.zig  main.zig  report.zig
agent/hunters/: behavioral.zig  exposure.zig  memory.zig  syscall.zig
control-api/: server.py
gateway/: api.py  requirements.txt
plugins/: ai_model_backdoor.so.sig  cloud_escape.so.sig  plugin.json  rust_malware.so.sig
plugins/ai_model_backdoor/: plugin.zig
plugins/cloud_escape/: plugin.zig
plugins/rust_malware/: plugin.zig
reports/: report.json
rules/: cloud_escape.rule  git_exposure.rule
scripts/: build-production.sh
signatures/: zero_day_patterns.json
src/: main.zig
src-tauri/: tauri.conf.json
src-tauri/src/: main.rs
src/ai/: adversary_simulation_ai.zig  attack_campaign_predictor.zig  autonomous_defense_ai.zig  cyber_war_mode_engine.zig  global_threat_prediction_model.zig  self_learning_defense_ai.zig  threat_reasoning_engine.zig
src/api/: api_engine.zig  intel_event.zig  intel_store.zig  rest_api.zig  stream_server.zig
src/cloud/: edge_sensor_deployment.zig  global_threat_storage.zig  multi_region_threat_cluster.zig
src/command_center/: attack_map.zig  botnet_graph.zig  campaign_tracker.zig  command_center_engine.zig  dashboard_api.zig  defense_dashboard.zig  event_stream.zig  prediction_dashboard.zig  soc_command_center.zig
src/control/: command_center_collector.zig  (+6 more)
(+269 files in other folders)
